--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <ul>
             <li><a href="lectures/9.html" target="_self">Lezione 9</a></li>
         </ul>
+        <ul>
+            <li><a href="lectures/11.html" target="_self">Lezione 11</a></li>
+        </ul>
     </section>
     <section>
         <h1>Esercizi</h1>
