Finita prima parte lezione 12

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <ul>
             <li><a href="lectures/11.html" target="_self">Lezione 11</a></li>
         </ul>
+        <ul>
+            <li><a href="lectures/12.html" target="_self">Lezione 12</a></li>
+        </ul>
     </section>
     <section>
         <h1>Esercizi</h1>
@@ -38,6 +41,9 @@
         </ul>
         <ul>
             <li><a href="exercises/10.html" target="_self">Lezione 10</a></li>
+        </ul>
+        <ul>
+            <li><a href="exercises/12.html" target="_self">Lezione 12</a></li>
         </ul>
     </section>
 </body>
