--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <ul>
             <li><a href="lectures/12.html" target="_self">Lezione 12</a></li>
         </ul>
+        <ul>
+            <li><a href="lectures/13.html" target="_self">Lezione 13</a></li>
+        </ul>
     </section>
     <section>
         <h1>Esercizi</h1>
@@ -44,6 +47,9 @@
         </ul>
         <ul>
             <li><a href="exercises/12.html" target="_self">Lezione 12</a></li>
+        </ul>
+        <ul>
+            <li><a href="exercises/13.html" target="_self">Lezione 13</a></li>
         </ul>
     </section>
 </body>
