--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="lectures/13.html" target="_self">Lezione 13</a></li>
         </ul>
         <ul>
-            <li><a href="lectures/14.html" target="_self">Lezione 14</a> <small>(MySQL)</small></li>
+            <li><a href="lectures/15-16.html" target="_self">Lezione 15/16</a> <small>(MySQL)</small></li>
         </ul>
     </section>
     <section>
@@ -53,6 +53,9 @@
         </ul>
         <ul>
             <li><a href="exercises/13.html" target="_self">Lezione 13</a></li>
+        </ul>
+        <ul>
+            <li><a href="exercises/14.html" target="_self">Lezione 14</a></li>
         </ul>
     </section>
 </body>
