--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Database</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -35,6 +38,9 @@
         </ul>
         <ul>
             <li><a href="lectures/15-16.html" target="_self">Lezione 15/16</a> <small>(MySQL)</small></li>
+        </ul>
+        <ul>
+            <li><a href="lectures/17.html" target="_self">Lezione 17</a> <small>(...)</small></li>
         </ul>
     </section>
     <section>
