--- a/index.html
+++ b/index.html
@@ -19,28 +19,31 @@
     <section>
         <h1>Lezioni</h1>
         <ul>
-            <li><a href="lectures/7.html" target="_self">Lezione 7</a></li>
+            <li><a href="lectures/7.html" target="_self">Lezione 7</a>  <small>(interrogazione con SQL: query)</small></li>
         </ul>
         <ul>
-            <li><a href="lectures/8.html" target="_self">Lezione 8</a></li>
+            <li><a href="lectures/8.html" target="_self">Lezione 8</a>  <small>(query annidate SQL)</small></li>
         </ul>
         <ul>
-            <li><a href="lectures/9.html" target="_self">Lezione 9</a></li>
+            <li><a href="lectures/9.html" target="_self">Lezione 9</a> <small>(creazione,Eliminazione,Inserimento di dati in SQL)</small></li>
         </ul>
         <ul>
-            <li><a href="lectures/11.html" target="_self">Lezione 11</a></li>
+            <li><a href="lectures/11.html" target="_self">Lezione 11</a> <small>(viste)</small></li>
         </ul>
         <ul>
-            <li><a href="lectures/12.html" target="_self">Lezione 12</a></li>
+            <li><a href="lectures/12.html" target="_self">Lezione 12</a> <small>(controllo degli accessi)</small></li> 
         </ul>
         <ul>
-            <li><a href="lectures/13.html" target="_self">Lezione 13</a></li>
+            <li><a href="lectures/13.html" target="_self">Lezione 13</a> <small>(trigger)</small></li>
         </ul>
         <ul>
             <li><a href="lectures/15-16.html" target="_self">Lezione 15/16</a> <small>(MySQL)</small></li>
         </ul>
         <ul>
-            <li><a href="lectures/17.html" target="_self">Lezione 17</a> <small>(...)</small></li>
+            <li><a href="lectures/17-18.html" target="_self">Lezione 17-18</a> <small>(Progettazione concettuale)</small></li>
+        </ul>
+        <ul>
+            <li><a href="lectures/19.html" target="_self">Lezione 19</a> <small>(Progettazione logica)</small></li>
         </ul>
     </section>
     <section>
