--- a/lectures/17-18.html
+++ b/lectures/17-18.html
@@ -354,10 +354,10 @@
         </p>
         <ul>
             <li>
-                <span class="bold">Totalità (t)</span>: indica se ogni istanza dell'entità padre deve appartenere ad almeno una delle entità figlie.
+                <span class="bold">Totalità (t)</span>
             </li>
             <li>
-                <span class="bold">Esclusività (e)</span>: indica se un'istanza dell'entità padre può appartenere a una sola delle entità figlie.
+                <span class="bold">Esclusività (e)</span>  
             </li>
         </ul>
         <p>
